test/files/neg/t6162-overriding.check
t6162-overriding.scala:7: error: method bar in class SubBar overrides method bar in class Bar, but overriding this member is deprecated: `bar` will be made private in a future version.
  override def bar = 43
               ^
one error found
